--- a/flask/free_wheels/_includes/pt/step-ranking-ibge.html
+++ b/flask/free_wheels/_includes/pt/step-ranking-ibge.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-md-12 text-center">
         <h1>
-          Ranking
+          Lista ordenada
         </h1>
         <p>Clique no título de cada coluna para reordenar a tabela.</p>
       </div>
