--- a/flask/free_wheels/_includes/pt/step-map-ibge.html
+++ b/flask/free_wheels/_includes/pt/step-map-ibge.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="rank-position">
-                      <i class="icon-podium"></i>
+                      <i class="icon-chair"></i>
                       <span class="ranking-dificuldade_geral"> - </span>
                     </div>
                   </div>
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-dificuldade"> - </span>
                         </div>
                       </div>
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-smped"> - </span>
                         </div>
                       </div>
@@ -126,7 +126,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-enxergar_geral"> - </span>
                         </div>
                       </div>
@@ -146,7 +146,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-enxergar"> - </span>
                         </div>
                       </div>
@@ -168,7 +168,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-ouvir_geral"> - </span>
                         </div>
                       </div>
@@ -188,7 +188,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-ouvir"> - </span>
                         </div>
                       </div>
@@ -210,7 +210,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-caminhar_geral"> - </span>
                         </div>
                       </div>
@@ -230,7 +230,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-caminhar"> - </span>
                         </div>
                       </div>
@@ -252,7 +252,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-intelectual_geral"> - </span>
                         </div>
                       </div>
@@ -272,7 +272,7 @@
                         </div>
 
                         <div class="rank-position">
-                          <i class="icon-podium"></i>
+                          <i class="icon-chair"></i>
                           <span class="ranking-intelectual"> - </span>
                         </div>
                       </div>
