Path adjustments, FCGI integration

--- a/flask/free_wheels/_includes/pt/step-map-ibge.html
+++ b/flask/free_wheels/_includes/pt/step-map-ibge.html
@@ -10,7 +10,7 @@
         <center>Clique <a href="index.html#map">aqui</a> para visualizar os recursos de acessibilidade dos distritos da cidade de São Paulo!</center>
 
 
-        <form action="http://127.0.0.1:5000/pessoas" method="get" target="POPUPW"
+        <form action="fw_search.fcgi/pessoas" method="get" target="POPUPW"
             onsubmit="POPUPW = window.open('about:blank','POPUPW',
            'width=900,height=600');">
           Ou pesquise por um endereço e raio para visualizar o número de pessoas aproximado dentro deste raio: <input type="text" name="q">
