--- a/flask/free_wheels/_includes/pt/step-map.html
+++ b/flask/free_wheels/_includes/pt/step-map.html
@@ -9,7 +9,7 @@
       <h4>
         <center>Clique <a href="ibge.html#map">aqui</a> para visualizar a distribuição de pessoas com dificuldade no município!</center>
 
-        <form action="http://127.0.0.1:5000/coisas" method="get" target="POPUPW"
+        <form action="fw_search.fcgi/coisas" method="get" target="POPUPW"
             onsubmit="POPUPW = window.open('about:blank','POPUPW',
            'width=900,height=600');">
           Ou pesquise por um endereço e raio para visualizar as vagas, estabelecimentos e transporte público dentro deste raio: <input type="text" name="q">
