--- a/flask/free_wheels/_includes/pt/step-methodology-ibge.html
+++ b/flask/free_wheels/_includes/pt/step-methodology-ibge.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
-            O <a href='https://censo2010.ibge.gov.br/' target='_blank'>Censo do IBGE (Instituto Brasileiro de Geografia e Estatística)</a> é um estudo estatístico que mede a densidade populacional e o perfil da população brasileira. O último censo foi realizado em 2010, e seus resultados foram usados para construir os mapas a baixo. Em vez de usar a mesma divisão em regiões dos dados Free Wheels, os dados foram agrupados em 'áreas de ponderação', definidas pelo proprio orgão.
+            O <a href='https://censo2010.ibge.gov.br/' target='_blank'>Censo do IBGE (Instituto Brasileiro de Geografia e Estatística)</a> é um estudo estatístico que mede a densidade populacional e o perfil da população brasileira. O último censo foi realizado em 2010, e seus resultados foram usados para construir os mapas abaixo. Os dados foram agrupados em 'áreas de ponderação', definidas pelo IBGE.
 
             Os mapas construídos apartir destes dados são:
             <ul>
