--- a/flask/free_wheels/_includes/pt/step-methodology-ibge.html
+++ b/flask/free_wheels/_includes/pt/step-methodology-ibge.html
@@ -10,7 +10,7 @@
           <p>
             O <a href='https://censo2010.ibge.gov.br/' target='_blank'>Censo do IBGE (Instituto Brasileiro de Geografia e Estatística)</a> é um estudo estatístico que mede a densidade populacional e o perfil da população brasileira. O último censo foi realizado em 2010, e seus resultados foram usados para construir os mapas abaixo. Os dados foram agrupados em 'áreas de ponderação', definidas pelo IBGE.
 
-            Os mapas construídos apartir destes dados são:
+            Apartir destes dados, dois tipos de mapas foram desenvolvidos: Mapas gerais mostram qual portentagem da população moradora da região entrevistada afirma ter algum tipo de dificuldade ou deficiência, enquanto mapas de distribuição mostram qual porcentagem da população que respondeu ter dificuldade ou deficiência mora na região. Os mapas construídos são:
             <ul>
               <li><b>Alguma dificuldade (Geral)</b>: mostra a porcentagem por área de ponderação de pessoas que afirmaram ter algum tipo de dificuldade ou deficiência.</li>
               <li><b>Dif. de enxergar (Geral)</b>: mostra a porcentagem por área de ponderação de pessoas que afirmaram ter dificuldade de enxergar.</li>
